added excel format reports via the spreadsheet-excel gem, added specs, changed install to copy fewer files into the app so that updates are easier

--- a/views/reports/index.rhtml
+++ b/views/reports/index.rhtml
@@ -2,6 +2,12 @@
 
 <ol>
   <%- @reports.each do |report| -%>
-    <li><%= link_to h(report.name), :action => 'show', :id => report.id %> (<%= link_to 'CSV', :action => 'show', :id => report.id, :format => 'csv' %>)</li>
+    <li>
+			<%= link_to h(report.name), :action => 'show', :id => report.id %>
+			(
+				<%= link_to 'CSV', :action => 'show', :id => report.id, :format => 'csv' %>
+				<%= link_to 'Excel', :action => 'show', :id => report.id, :format => 'xls' %>
+			)
+		</li>
   <%- end -%>
 </ol>
