--- a/views/reports/show.rhtml
+++ b/views/reports/show.rhtml
@@ -1,17 +1,6 @@
 <h1><%= h @report.name %></h1>
 
-<p>Format: <%= link_to 'CSV', :format => 'csv' %></p>
+<p>Format: <%= link_to 'CSV', :format => 'csv' %>, <%= link_to 'Excel', :format => 'xls' %></p>
 
-<style>
-  table {
-    border-collapse: collapse;
-  }
-
-  td {
-    border: 1px solid black;
-    padding: 3px;
-  }
-</style>
-
-<%= @results %>
+<%= @table %>
 
